[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plot_helpers"
version = "0.0.1"
authors = [
  { name="Nicholas Lawrance", email="nicholas.lawrance@data61.csiro.au" },
]
description = "Basic helper tools for plotting"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["plot_helpers*"]  # ["*"] by default

[project.urls]
"Homepage" = "https://github.com/nrjl/plot_helpers"
"Bug Tracker" = "https://github.com/nrjl/plot_helpers/issues"